--- a/WishList/Views/Account/Register.cshtml
+++ b/WishList/Views/Account/Register.cshtml
@@ -4,19 +4,19 @@
 <form asp-action="Register">
     <div class="text-danger" asp-validation-summary="All"></div>
     <div>
-        <label asp-for"Email"></label>
+        <label asp-for="Email"></label>
         <br />
-        <input asp-for"Email"/>
+        <input asp-for="Email"/>
     </div>
     <div>
-        <label asp-for"Password"></label>
+        <label asp-for="Password"></label>
         <br />
-        <input asp-for"Password"/>
+        <input asp-for="Password"/>
     </div>
     <div>
-        <label asp-for"ConfirmPassword"></label>
+        <label asp-for="ConfirmPassword"></label>
         <br />
-        <input asp-for"ConfirmPassword" />
+        <input asp-for="ConfirmPassword" />
     </div>
     <div>
         <button type="submit">Register User</button>
